[gd_scene load_steps=4 format=2]

[ext_resource path="res://Level/Ready_fight/Ready_fight/Fight.png" type="Texture" id=1]
[ext_resource path="res://Level/Ready_fight/Ready.gd" type="Script" id=2]
[ext_resource path="res://Level/Ready_fight/Fight.wav" type="AudioStream" id=3]

[node name="Ready" type="Node2D"]
position = Vector2( 425.82, 294.032 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.227185, 0.239953 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Pressure_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="disappear_timer" type="Timer" parent="."]
one_shot = true

[node name="Ready" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="timeout" from="Pressure_timer" to="." method="_on_Pressure_timer_timeout"]
[connection signal="timeout" from="disappear_timer" to="." method="_on_disappear_timer_timeout"]
